--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
@@ -1,20 +1,28 @@
-// .example-container {}
+// .week-box-edit {}
+.week-box-view {
+  background-color: white;
+  padding: 1em;
+  color: #555555;
+}
 
-.example-list {
+.assignments-container {}
+
+.assignments-list {
   border: dashed 1px #ccc;
   min-height: 20px;
   border-radius: 4px;
   overflow: hidden;
 }
 
-.example-box {
+// .assignment-box {}
+.draggable {
   cursor: move;
 }
 
 .cdk-drag-preview {
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -25,6 +33,6 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.assignment-list.cdk-drop-list-dragging .assignment-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
