--- a/src/app/modules/assignments/components/assignment/assignment.component.scss
+++ b/src/app/modules/assignments/components/assignment/assignment.component.scss
@@ -1,11 +1,7 @@
-.assignment-name {
-  font-weight: bold;
-}
+// .assignment-name {}
 
 .assignment-assignee {
   font-weight: bold;
 }
 
-.assignment-assistant {
-
-}
+// .assignment-assistant {}
