--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,4 @@
 <div>
+  <p *ngIf="message">{{ message | translate }}</p>
   <img id="loading-gif" src="/assets/images/loading.gif" alt="Loading ..." />
 </div>
