--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -1,29 +1,22 @@
-<div *ngIf="studentsForm">
-  <form (ngSubmit)="onSubmit()" [formGroup]="studentsForm" fxLayout="column" fxLayoutAlign="space-between stretch">
-    <div [ngClass]="{ 'week-box-edit': isEditMode, 'week-box-view': !isEditMode }" cdkDropListGroup fxFlex fxLayout="column" fxLayoutAlign="space-between stretch">
-      <div *ngFor="let week of weeks; index as wIndex" fxFlex class="assignments-container">
-        <h2>
-          {{ week | translateDate: "MMM-D" | async }}
-        </h2>
-        <button *ngIf="isEditMode" type="button" mat-raised-button matTooltip="{{ 'add-new-assignment' | translate }}" [disabled]="studentsForm.disabled" (click)="addAssignment(week, wIndex)">
-          <mat-icon>add_rounded</mat-icon>
-        </button>
+<app-loader *ngIf="loading"></app-loader>
 
-        <!--<div >-->
-        <div cdkDropList cdkDropListData="{{ wIndex }}" [ngClass]="{ 'assignments-list': isEditMode }" (cdkDropListDropped)="drop($event, wIndex)">
-          <div *ngFor="let assignment of this.assignmentsByWeek[wIndex]" class="assignment-box" [ngClass]="{ 'draggable': isEditMode }" cdkDrag [cdkDragDisabled]="!isEditMode">
-            <app-assignment [assignment]="assignment" [isEditMode]="isEditMode" [listOfParts]="listOfParts" [assignableListByPart]="assignableListByPart" [form]="studentsForm" [wIndex]="wIndex" (isRemoved)="removeAssignment($event, wIndex)"></app-assignment>
-          </div>
-        </div>
-        <!--</div>-->
-      </div>
-    </div>
-    &nbsp;
+<div *ngIf="studentsForm">
+  <form
+    (ngSubmit)="onSubmit()"
+    [formGroup]="studentsForm"
+    fxLayout="column"
+    fxLayoutAlign="space-between stretch"
+  >
     <!-- FORM BUTTONS-->
     <div *ngIf="isEditMode; else viewButtons" fxFlex>
       <!-- 
       fxLayout="row" fxLayoutAlign="space-around center" -->
-      <button type="reset" mat-raised-button class="mat-primary" (click)="isEditMode = false">
+      <button
+        type="reset"
+        mat-raised-button
+        class="mat-primary"
+        (click)="setEditMode(false)"
+      >
         <mat-icon>undo</mat-icon>
         {{ "cancel" | translate | titlecase }}
       </button>
@@ -37,17 +30,100 @@
     <!-- PRINT BUTTONS -->
     <ng-template #viewButtons>
       <div fxFlex>
-        <button type="button" mat-raised-button class="mat-primary" (click)="isEditMode = true">
+        <button
+          type="button"
+          mat-raised-button
+          class="mat-primary"
+          (click)="setEditMode(true)"
+        >
           <mat-icon>edit</mat-icon>
           {{ "edit" | translate | titlecase }}
         </button>
 
-        <button type="button" mat-raised-button class="mat-primary" (click)="saveAsPdf()">
+        <button
+          type="button"
+          mat-raised-button
+          class="mat-primary"
+          (click)="saveAsPdf()"
+        >
           <mat-icon>print</mat-icon>
           {{ "print" | translate | titlecase }}
         </button>
       </div>
     </ng-template>
+    &nbsp;
+
+    <!-- WEEKS -->
+    <div
+      [ngClass]="{ 'week-box-edit': isEditMode, 'week-box-view': !isEditMode }"
+      cdkDropListGroup
+      fxFlex
+      fxFill
+      fxLayout="column"
+      fxLayoutAlign="space-between center"
+    >
+      <div
+        *ngFor="let week of weeks; index as wIndex"
+        fxFlex
+        fxFill
+        fxLayout="row wrap"
+        fxLayoutAlign="space-around start"
+        class="assignments-container"
+      >
+        <h2 fxFlex>
+          {{ week | translateDate: "MMM-D" | async }}
+        </h2>
+        <button
+          *ngIf="isEditMode"
+          type="button"
+          fxFlex="nogrow"
+          mat-raised-button
+          matTooltip="{{ 'add-new-assignment' | translate }}"
+          [disabled]="studentsForm.disabled"
+          (click)="addAssignment(week, wIndex)"
+        >
+          <mat-icon>add_rounded</mat-icon>
+        </button>
+
+        <!--<div >-->
+        <div
+          fxFlex="100"
+          cdkDropList
+          cdkDropListData="{{ wIndex }}"
+          [ngClass]="{ 'assignments-list': isEditMode }"
+          (cdkDropListDropped)="drop($event, wIndex)"
+        >
+          <ng-container
+            *ngIf="this.assignmentsByWeek[wIndex].length; else noAssignment"
+          >
+            <div
+              *ngFor="let assignment of this.assignmentsByWeek[wIndex]"
+              class="assignment-box"
+              [ngClass]="{
+                draggable: isEditMode,
+                'alternate-color': assignment.position % 2 !== 0
+              }"
+              cdkDrag
+              [cdkDragDisabled]="!isEditMode"
+            >
+              <app-assignment
+                [assignment]="assignment"
+                [isEditMode]="isEditMode"
+                [listOfParts]="listOfParts"
+                [assignableListByPart]="assignableListByPart"
+                [form]="studentsForm"
+                [wIndex]="wIndex"
+                (isRemoved)="removeAssignment($event, wIndex)"
+              ></app-assignment>
+            </div>
+          </ng-container>
+          <ng-template #noAssignment>
+            <div>{{ "no-assignment" | translate }}</div>
+          </ng-template>
+        </div>
+        <!--</div>-->
+      </div>
+    </div>
   </form>
 
   <div *ngIf="payLoad" class="form-row">
