--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
@@ -1,11 +1,23 @@
-// .week-box-edit {}
+.week-box-edit {
+  // Styles for the form
+  .alternate-color {
+    border-top: 1px solid #444444;
+  }
+}
+
 .week-box-view {
   background-color: white;
   padding: 1em;
   color: #555555;
 }
 
-.assignments-container {}
+.assignments-container {
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.2em;
+}
 
 .assignments-list {
   border: dashed 1px #ccc;
@@ -14,7 +26,9 @@
   overflow: hidden;
 }
 
-// .assignment-box {}
+.assignment-box {
+}
+
 .draggable {
   cursor: move;
 }
@@ -22,7 +36,7 @@
 .cdk-drag-preview {
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-  0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -33,6 +47,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.assignment-list.cdk-drop-list-dragging .assignment-box:not(.cdk-drag-placeholder) {
+.assignment-list.cdk-drop-list-dragging
+  .assignment-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
