--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -54,74 +54,77 @@
     &nbsp;
 
     <!-- WEEKS -->
-    <div
-      [ngClass]="{ 'week-box-edit': isEditMode, 'week-box-view': !isEditMode }"
-      cdkDropListGroup
-      fxFlex
-      fxFill
-      fxLayout="column"
-      fxLayoutAlign="space-between center"
-    >
+    <div fxFlex #printableArea>
       <div
-        *ngFor="let week of weeks; index as wIndex"
-        fxFlex
-        fxFill
-        fxLayout="row wrap"
-        fxLayoutAlign="space-around start"
-        class="assignments-container"
+        [ngClass]="{
+          'week-box-edit': isEditMode,
+          'week-box-view': !isEditMode
+        }"
+        cdkDropListGroup
+        fxLayout="column"
+        fxLayoutAlign="space-between center"
       >
-        <h2 fxFlex>
-          {{ week | translateDate: "MMM-D" | async }}
-        </h2>
-        <button
-          *ngIf="isEditMode"
-          type="button"
-          fxFlex="nogrow"
-          mat-raised-button
-          matTooltip="{{ 'add-new-assignment' | translate }}"
-          [disabled]="studentsForm.disabled"
-          (click)="addAssignment(week, wIndex)"
-        >
-          <mat-icon>add_rounded</mat-icon>
-        </button>
-
-        <!--<div >-->
         <div
-          fxFlex="100"
-          cdkDropList
-          cdkDropListData="{{ wIndex }}"
-          [ngClass]="{ 'assignments-list': isEditMode }"
-          (cdkDropListDropped)="drop($event, wIndex)"
+          *ngFor="let week of weeks; index as wIndex"
+          fxFlex
+          fxFill
+          fxLayout="row wrap"
+          fxLayoutAlign="space-around start"
+          class="assignments-container"
         >
-          <ng-container
-            *ngIf="this.assignmentsByWeek[wIndex].length; else noAssignment"
+          <h2 fxFlex>
+            {{ week | translateDate: "MMM-D" | async }}
+          </h2>
+          <button
+            *ngIf="isEditMode"
+            type="button"
+            fxFlex="nogrow"
+            mat-raised-button
+            matTooltip="{{ 'add-new-assignment' | translate }}"
+            [disabled]="studentsForm.disabled"
+            (click)="addAssignment(week, wIndex)"
           >
-            <div
-              *ngFor="let assignment of this.assignmentsByWeek[wIndex]"
-              class="assignment-box"
-              [ngClass]="{
-                draggable: isEditMode,
-                'alternate-color': assignment.position % 2 !== 0
-              }"
-              cdkDrag
-              [cdkDragDisabled]="!isEditMode"
+            <mat-icon>add_rounded</mat-icon>
+          </button>
+
+          <!--<div >-->
+          <div
+            fxFlex="100"
+            cdkDropList
+            cdkDropListData="{{ wIndex }}"
+            [ngClass]="{ 'assignments-list': isEditMode }"
+            (cdkDropListDropped)="drop($event, wIndex)"
+          >
+            <ng-container
+              *ngIf="this.assignmentsByWeek[wIndex].length; else noAssignment"
             >
-              <app-assignment
-                [assignment]="assignment"
-                [isEditMode]="isEditMode"
-                [listOfParts]="listOfParts"
-                [assignableListByPart]="assignableListByPart"
-                [form]="studentsForm"
-                [wIndex]="wIndex"
-                (isRemoved)="removeAssignment($event, wIndex)"
-              ></app-assignment>
-            </div>
-          </ng-container>
-          <ng-template #noAssignment>
-            <div>{{ "no-assignment" | translate }}</div>
-          </ng-template>
+              <div
+                *ngFor="let assignment of this.assignmentsByWeek[wIndex]"
+                class="assignment-box"
+                [ngClass]="{
+                  draggable: isEditMode,
+                  'alternate-color': assignment.position % 2 !== 0
+                }"
+                cdkDrag
+                [cdkDragDisabled]="!isEditMode"
+              >
+                <app-assignment
+                  [assignment]="assignment"
+                  [isEditMode]="isEditMode"
+                  [listOfParts]="listOfParts"
+                  [assignableListByPart]="assignableListByPart"
+                  [form]="studentsForm"
+                  [wIndex]="wIndex"
+                  (isRemoved)="removeAssignment($event, wIndex)"
+                ></app-assignment>
+              </div>
+            </ng-container>
+            <ng-template #noAssignment>
+              <div>{{ "no-assignment" | translate }}</div>
+            </ng-template>
+          </div>
+          <!--</div>-->
         </div>
-        <!--</div>-->
       </div>
     </div>
   </form>
