Working on registering user

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -16,7 +16,7 @@
         <mat-card-title
           >User login
           <a class="redirect" [routerLink]="['/auth/register']">
-            {{ 'register-an-account' | translate | titlecase }}
+            {{ "register-an-account" | translate | titlecase }}
           </a>
         </mat-card-title>
         <mat-card-content>
@@ -65,7 +65,7 @@
               type="submit"
               [disabled]="!userForm.valid"
             >
-              {{ 'login' | translate | titlecase }}
+              {{ "login" | translate | titlecase }}
             </button>
           </form>
         </mat-card-content>
