--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -23,6 +23,6 @@
       >
     </button>
 
-    <ma-user-menu [currentUser]="toolbarHelpers?.currentUser"></ma-user-menu>
+    <ma-user-menu [currentUser]="currentUser.customData"></ma-user-menu>
   </div>
 </mat-toolbar>
