--- a/src/app/shared/components/user-menu/user-menu.component.scss
+++ b/src/app/shared/components/user-menu/user-menu.component.scss
@@ -51,8 +51,9 @@
     }
 
     &.open {
-      opacity: 1;
+      opacity: 5;
       visibility: visible;
+      background-color: #212121;
     }
   }
 }
