--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/prebuilt-themes/purple-green.css';
+@import "~@angular/material/prebuilt-themes/purple-green.css";
 // @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 // Import theming functions
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
 @mixin theme-color-grabber($theme) {
   $primary: map-get($theme, primary);
@@ -29,7 +29,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 button.mat-fab-bottom-right {
@@ -38,6 +38,7 @@ button.mat-fab-bottom-right {
   bottom: 20px;
   left: auto;
   position: fixed;
+  z-index: 10;
 }
 
 /* Generic classes */
