Rethinking the design of user selection to include the latest assignments

--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -106,7 +106,7 @@
                   'alternate-color': assignment.position % 2 !== 0
                 }"
                 cdkDrag
-                [cdkDragDisabled]="!isEditMode"
+                [cdkDragDisabled]="true"
               >
                 <app-assignment
                   [assignment]="assignment"
