--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.scss
@@ -20,7 +20,7 @@ h2 {
 }
 
 .assignments-list {
-  border: dashed 1px #ccc;
+  // border: dashed 1px #ccc;
   min-height: 20px;
   border-radius: 4px;
   overflow: hidden;
@@ -30,7 +30,7 @@ h2 {
 }
 
 .draggable {
-  cursor: move;
+  // cursor: move;
 }
 
 .cdk-drag-preview {
