--- a/src/app/modules/assignments/components/assignment/assignment.component.html
+++ b/src/app/modules/assignments/components/assignment/assignment.component.html
@@ -8,8 +8,7 @@
     >
       <button
         type="button"
-        fxFlex="nogrow"
-        mat-raised-button
+        mat-icon-button
         [disabled]="form.disabled"
         (click)="removeAssignment()"
       >
