--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -7,6 +7,7 @@
 <!--<div *ngIf="loadedData.users && loadedData.parts; else loading">-->
 <p>Parts loaded: {{ parts.length }}</p>
 <p>Users loaded: {{ users.length }}</p>
+<p>Assignments loaded: {{ assignments.length }}</p>
 
 <!--</div>-->
 <ng-template #loading>
