--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -9,6 +9,8 @@
 <p>Users loaded: {{ users.length }}</p>
 <p>Assignments loaded: {{ assignments.length }}</p>
 
+<app-picker title="Choose" placeholder="Choose an option ..."></app-picker>
+
 <!--</div>-->
 <ng-template #loading>
   <app-loader></app-loader>
