--- a/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek-students/assignment-midweek-students.component.html
@@ -129,8 +129,8 @@
     </div>
   </form>
 
-  <div *ngIf="payLoad" class="form-row">
+  <!-- <div *ngIf="payLoad" class="form-row">
     <strong>Saved the following values</strong><br />
     <pre>{{ payLoad }}</pre>
-  </div>
+  </div> -->
 </div>
