Redesigned language selector and user menu

--- a/src/app/shared/components/sidemenu/sidemenu.component.html
+++ b/src/app/shared/components/sidemenu/sidemenu.component.html
@@ -34,7 +34,7 @@
 
   <!-- Language selector -->
   <!-- TODO a better job displaying the language selector -->
-  <mat-form-field *ngIf="!iconOnly">
+  <!-- <mat-form-field *ngIf="!iconOnly">
     <span matPrefix style="margin-right: 8px;">
       <mat-icon>language</mat-icon>
     </span>
@@ -62,5 +62,5 @@
       <mat-option value="en"> English </mat-option>
       <mat-option value="fr"> Français </mat-option>
     </mat-select>
-  </mat-form-field>
+  </mat-form-field> -->
 </div>
