--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,19 +1,21 @@
 <!-- <stbui-loading *ngIf="showLoading"></stbui-loading> -->
 <mat-toolbar
   fxFlexLayout="row"
-  fxLayoutAlign="start center"
+  fxLayoutAlign="space-between center"
   class="mat-elevation-z4"
 >
-  <button
-    mat-icon-button
-    (click)="sidenav.toggle(); drawer.toggle()"
-    *ngIf="matDrawerShow"
-  >
-    <i class="material-icons app-toolbar-menu">menu </i>
-  </button>
-  <button mat-icon-button (click)="sidenav.toggle()" *ngIf="!matDrawerShow">
-    <i class="material-icons app-toolbar-menu">menu </i>
-  </button>
+  <div fxFlex>
+    <button
+      mat-icon-button
+      (click)="sidenav.toggle(); drawer.toggle()"
+      *ngIf="matDrawerShow"
+    >
+      <i class="material-icons app-toolbar-menu">menu </i>
+    </button>
+    <button mat-icon-button (click)="sidenav.toggle()" *ngIf="!matDrawerShow">
+      <i class="material-icons app-toolbar-menu">menu </i>
+    </button>
+  </div>
 
   <!-- Right icons and user menu -->
   <div fxFlex fxFlexLayout="row" fxLayoutAlign="end center">
@@ -23,6 +25,25 @@
       >
     </button>
 
+    <ma-language-picker></ma-language-picker>
+
     <ma-user-menu [currentUser]="currentUser.customData"></ma-user-menu>
+
+    <!-- Language selector -->
+    <!-- TODO a better job displaying the language selector -->
+    <!-- <mat-form-field>
+      <span matPrefix style="margin-right: 8px;">
+        <mat-icon>language</mat-icon>
+      </span>
+
+      <mat-select
+        name="language"
+        [(ngModel)]="language"
+        (selectionChange)="changeLanguage()"
+      >
+        <mat-option value="en"> English </mat-option>
+        <mat-option value="fr"> Français </mat-option>
+      </mat-select>
+    </mat-form-field> -->
   </div>
 </mat-toolbar>
