--- a/src/app/shared/components/user-menu/user-menu.component.html
+++ b/src/app/shared/components/user-menu/user-menu.component.html
@@ -4,15 +4,13 @@
     (click)="isOpen = !isOpen"
     class="toolbar-user-btn"
     [class.open]="isOpen"
-    [ngStyle.xs]="{ 'min-width': '70px' }"
   >
+    <!-- [ngStyle.xs]="{ 'min-width': '70px' }" -->
     <span fxLayout="row" fxLayoutAlign="start center">
-      <!-- <img
-        class="avatar"
-        [src]="currentUser?.photoURL || 'assets/images/avatars/noavatar.png'"
-      /> -->
-      <span class="name" fxHide fxShow.gt-xs>{{ currentUser?.firstName }}</span>
-      <mat-icon class="icon" fxHide fxShow.gt-xs>keyboard_arrow_down</mat-icon>
+      <img class="avatar" src="assets/images/avatars/noavatar.png" />
+      <!-- fxHide fxShow.gt-xs -->
+      <!-- <span class="name">{{ currentUser?.firstName }}</span> -->
+      <mat-icon class="icon">keyboard_arrow_down</mat-icon>
     </span>
   </button>
 
