--- a/src/app/shared/components/user-menu/user-menu.component.scss
+++ b/src/app/shared/components/user-menu/user-menu.component.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    min-width: 160px;
+    // min-width: 160px;
 
     .avatar {
       width: 30px;
@@ -40,7 +40,8 @@
   .dropdown {
     z-index: 2;
     position: absolute;
-    width: 100%;
+    right: 0;
+    // width: 100%;
     min-width: 160px;
     opacity: 0;
     visibility: hidden;
