Integrating Template Outlet in assignable list

--- a/src/app/modules/assignments/components/assignment/assignment.component.html
+++ b/src/app/modules/assignments/components/assignment/assignment.component.html
@@ -18,17 +18,17 @@
       </div>
       <!-- PART -->
       <div fxFlex="30" fxFlex.lt-sm="auto">
-        <app-picker
-          title="{{ 'choose-assignment' | translate | titlecase }}"
-          placeholder="{{ 'assignment' | translate | titlecase }}"
-          [form]="form"
-          [controlPath]="[wIndex, assignment.position, 'part']"
-          [options]="listOfParts"
-          labelField="name"
-          (selectionChange)="onPartChange($event)"
-        ></app-picker>
+        <!--<app-picker-->
+        <!--  title="{{ 'choose-assignment' | translate | titlecase }}"-->
+        <!--  placeholder="{{ 'assignment' | translate | titlecase }}"-->
+        <!--  [form]="form"-->
+        <!--  [controlPath]="[wIndex, assignment.position, 'part']"-->
+        <!--  [options]="listOfParts"-->
+        <!--  labelField="name"-->
+        <!--  (selectionChange)="onPartChange($event)"-->
+        <!--></app-picker>-->
 
-        <!-- <mat-form-field fxFill>
+        <mat-form-field fxFill>
           <mat-select
             placeholder="{{ 'assignment' | translate | titlecase }}"
             [compareWith]="compareFn"
@@ -46,13 +46,33 @@
               {{ part.name | translate }}
             </mat-option>
           </mat-select>
-        </mat-form-field> -->
+        </mat-form-field>
       </div>
       <!-- ASSIGNEE -->
       <div fxFlex="30" fxFlex.lt-sm="auto">
+        <ng-template #assignableList>
+          <mat-selection-list
+            #assignable-list
+            [multiple]="false"
+            (selectionChange)="closeDialog()"
+          >
+            <mat-list-option
+              *ngFor="let user of data.options; let isFirst = first"
+              [value]="user"
+              cdkFocusInitial
+            >
+              <h3 matLine>{{ user.fullName }}</h3>
+              <span matLine>Last {{ user.assignments.length }}</span>
+              <span matLine>
+                Last {{ user.assignments[0]?.week.toISOString() | translateDate: 'DATE_SHORT' | async }}
+              </span>
+            </mat-list-option>
+          </mat-selection-list>
+        </ng-template>
+      
         <app-picker
           *ngIf="form.get([wIndex, assignment.position, 'part']).value"
-          [component]="displayComponentRef.componentType"
+          [optionsTemplate]="assignableList"
           title="{{ 'choose-someone' | translate | titlecase }}"
           placeholder="{{ 'assignee' | translate | titlecase }}"
           [form]="form"
